ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cert.vcluster.tech
    secretName: example-cert-tls
  rules:
  - host: cert.vcluster.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workshop-service
            port:
              number: 80
